# qa_quru_python_3_17

./: pyproject.toml
