[tool.poetry]
name = "qa-quru-python-3-17"
version = "0.1.0"
description = ""
authors = ["Alexander Santalov <vgtrk520@yandex.ru>"]
readme = "README.md"
packages = [{include = "qa_quru_python_3_17"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
selene = "2.0.0b17"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts=" --durations=10 -l -vv --alluredir=allure-results"
markers=["slow: only slow tests", "fast"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
